payment/payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: payment
  labels:
    app: payment
spec:
  selector:
    matchLabels:
      app: payment
  replicas: 1
  template:
    metadata:
      labels:
        app: payment
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: payment
        image: registry.flou.dev/payment:4593983d-85f3-45e6-b88f-2887cfa4db3d
        ports:
        - containerPort: 80
          name: web
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: payment
  labels:
    mirror.linkerd.io/exported: "true"
spec:
  selector:
    app: payment
  ports:
  - port: 80
    targetPort: 80
