payment/payments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: payment
  labels:
    app: payment
spec:
  selector:
    matchLabels:
      app: payment
  replicas: 1
  template:
    metadata:
      labels:
        app: payment
    spec:
      imagePullSecrets:
        - name: harbor
      containers:
      - name: payment
        image: harbor.flou.dev/coflnet/payments:c5c5718d-5aa3-4c80-800b-926e9457671c
        ports:
        - containerPort: 80
          name: web
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: payment
  labels:
    mirror.linkerd.io/exported: "true"
spec:
  selector:
    app: payment
  ports:
  - port: 80
    targetPort: 80
